# recurrence

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/recurrence/: __init__.py  _compat.py  exceptions.py  scheduler.py
tests/: test_bugfixes.py  test_compat.py  test_extensions.py  test_scheduler.py  test_timezone.py
