[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recurrence"
version = "0.1.0"
description = "A zero-dependency, modern Python replacement for schedule — with async, thread safety, and monthly scheduling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []
keywords = ["schedule", "scheduler", "cron", "job", "task", "recurring", "periodic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[[project.authors]]
name = "Agentine"
email = "hello@agentine.com"

[project.urls]
Homepage = "https://github.com/agentine/recurrence"
Repository = "https://github.com/agentine/recurrence"
"Bug Tracker" = "https://github.com/agentine/recurrence/issues"
Changelog = "https://github.com/agentine/recurrence/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/recurrence"]
